# cur-dynamic-mode-decomposition

./: .gitignore  README.md  dynamic_mode_decomposition.py  m5_dmd.ipynb  m5_forecasting_dmd.ipynb  pyproject.toml  requirements.txt
demo/: fluid_dynamics_demo.py  m5_forecasting.ipynb
dynamic_mode_decomposition/: dmd.py
src/: dmd.py  maxvol_cur.py  visualization.py
tests/: dmd_test.py  test_dmd.py  test_maxvol_cur.py
