[tool.poetry]
name = "dynamic-mode-decomposition"
version = "0.1.0"
description = "A demo of the dynamic mode decomposition."
authors = ["Kenneth Allen <kencubed@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "dynamic_mode_decomposition"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
