[tool.pdm.build]
includes = [
    "src",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Kenneth Allen"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "numpy<2.0.0,>=1.25.2",
    "pandas<3.0.0,>=2.0.3",
    "matplotlib<4.0.0,>=3.7.2",
    "jupyter<2.0.0,>=1.0.0",
    "scikit-learn<2.0.0,>=1.3.0",
    "pytest>=6.2.5",
]
name = "cur-dynamic-mode-decomposition"
version = "1.0.0"
description = "An implementation of the CUR based dynamic mode decomposition developed by K. Allen and S. De Pascuale. "
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<7.0.0,>=6.2.4",
    "jupyter<2.0.0,>=1.0.0",
]
